# hwprobe-mcp

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/hwprobe_mcp/: __init__.py  __main__.py  aggregate.py  deps.py  server.py  util.py
src/hwprobe_mcp/collectors/: __init__.py  inventory.py  lmsensors.py  nvidia.py  psutil_col.py  smart.py
tests/: test_collectors.py
